--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ramozz Dev</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <img src="../src/img/no-script.png" alt="">
+      <p>Você vai precisar ativar o Javascript pra poder ver o meu portfólio bro!</p>
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
